downgraded to java 8 compatibility